[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20" }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "postgres"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
